在本机环境正常运行